# jDAS

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test-sample.dvc  test.sh  Магомедов Магомед Шайдалавович MLOps project description.md
.dvc/: config
configs/: test-train.yaml  train.yaml
jDas/: train_hydra.py
jDas/api/: app.py  processor.py  yandex.py
jDas/cli/: main.py  train.py
jDas/core/: filter.py  loader.py  metrics.py  model.py
jDas/training/: dataset.py  trainer.py
jDas/utils/: config.py
scripts/: setup.py
